<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/_16ssp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temprature"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvTemprature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/_16ssp"
                tools:text="28.0 C" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/condition"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/_16ssp"
                tools:text="28.0 C" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/_16ssp"
                tools:text="28.0 C" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_speed"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/_16ssp"
                tools:text="28.0 C" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoBack"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>