<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tensor.myapplication.ui.authentication.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <EditText
            android:layout_marginVertical="@dimen/_18sdp"
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:textStyle="bold"
            android:background="@null"
            android:textColorHint="@color/purple_200"
            android:textColor="@color/purple_200"
            android:inputType="textEmailAddress"
            app:layout_constraintDimensionRatio="H,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:layout_constraintEnd_toEndOf="@id/edtEmail"
            app:layout_constraintStart_toStartOf="@id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@color/purple_700" />

        <EditText
            android:layout_marginVertical="@dimen/_18sdp"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:background="@null"
            android:textColorHint="@color/purple_200"
            android:textColor="@color/purple_200"
            app:layout_constraintDimensionRatio="H,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            tools:text="@string/password" />

        <View
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintEnd_toEndOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="@id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@color/purple_700" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_16ssp"
            app:layout_constraintDimensionRatio="H,7:1"
            app:layout_constraintBottom_toTopOf="@id/llor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/purple_200"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintDimensionRatio="H,7:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />


            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressbar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="@id/btnLogin"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/clLogin">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@color/purple_700" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/purple_700"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@color/purple_700" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@color/purple_200"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintDimensionRatio="H,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>